Se realizan las katas 8 y 9 con sus respectivas pruebas funcionando